--- a/documentation/Gemfile_lock.html
+++ b/documentation/Gemfile_lock.html
@@ -124,6 +124,8 @@ specs:
   guard-bundler (2.0.0)
     bundler (~&gt; 1.0)
     guard (~&gt; 2.2)
+  guard-gitpusher (0.2.0)
+    guard (&gt;= 0.2.0)
   guard-rspec (4.0.3)
     guard (&gt;= 2.1.1)
     rspec (~&gt; 2.14)
@@ -162,6 +164,7 @@ specs:
 <pre>bundler (~&gt; 1.3)
 guard
 guard-bundler
+guard-gitpusher
 guard-rspec
 prct09!
 rake
